@@ -31,6 +31,9 @@
     Notifications:
     * 4197 FIX: Fix sending notification to global fallback email address
 
+    BI:
+    * 4009 FIX: Business intelligence: Multihost aggregations are no longer broken after a core restart
+
     Reporting & Availability:
     * 3652 FIX: Unbreak PDF exports...
 
